feat: Add support for uploading SQLite databases and enhance SQL query handling
- Introduced UploadedDatabase model to store user-uploaded SQLite database files.
- Added upload_database_view to handle database uploads with validation for file type and size.
- Updated URLs to include a new endpoint for database uploads.
- Enhanced frontend to allow users to upload SQLite files directly from the Database Connection Modal.
- Implemented progress tracking for file uploads and validation for SQLite file types.
- Added functionality for auto-executing AI-generated SQL queries with user approval.
- Updated Canvas component to manage pending queries and provide user feedback for SQL execution.
- Refactored existing agent imports to accommodate new agent structure.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,15 @@
 Django
 django-cors-headers
 dj-database-url
-langchain-community
-langchain-core
-langchain
-langgraph
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-community>=0.3.0
+langchain-openai>=0.2.0
+langchain-tavily>=0.1.0
+langgraph>=0.2.0
 SQLAlchemy
 langsmith
-langchainhub
 pypdf
-langchain-openai
-langchain-tavily
 pymysql
-langchain-chroma
+python-dotenv
+gunicorn
