--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-community>=0.3.0
 langchain-openai>=0.2.0
+langchain-google-genai>=2.0.0
 langchain-tavily>=0.1.0
 langgraph>=0.2.0
 SQLAlchemy
