--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^11.11.6",
     "gsap": "^3.12.5",
-    "mermaid": "^11.12.0",
+    "lucide-react": "^0.563.0",
+    "mermaid": "^10.9.5",
+    "monaco-editor": "^0.52.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "monaco-editor": "^0.52.0"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
