--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,20 @@
     "@monaco-editor/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^11.11.6",
-    "gsap": "^3.12.5",
     "mermaid": "^11.12.0",
+    "monaco-editor": "^0.52.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "monaco-editor": "^0.52.0"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.1",
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
