--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^11.11.6",
+    "lucide-react": "^0.575.0",
     "mermaid": "^11.12.0",
     "monaco-editor": "^0.52.0",
     "react": "^19.1.1",
